# OpticalFlow-Lucas-Kanade-Algorithm

./: .gitignore  CMakeLists.txt  Makefile  Opencv_test.sln  README.md
mac/: lucas_kanade_mac.mm
test/: test.cpp  test.vcxproj
